View Issue Details

IDProjectCategoryView StatusLast Update
0032652Open CASCADEOCCT:Visualizationpublic2023-02-03 04:49
Reporterkgv Assigned Toinv 
PrioritynormalSeveritymajor 
Status closedResolutionfixed 
Product Version7.6.0 
Target Version7.6.1Fixed in Version7.7.0 
Summary0032652: Visualization - Select3D_SensitiveCylinder returns wrong 3D point on transformed shape
DescriptionSelect3D_SensitiveCylinder returns wrong 3D point (but correct depth along the picking ray) for transformed cylinder.
Steps To Reproduce
pload MODELING VISUALIZATION
pcylinder c1 10 20
trotate c1 0 0 0 1 1 0 25
ttranslate c1 2500 3500 1000
vinit View1
vclear
vaxo
vdisplay -dispmode 1 c1
vfit
vpoint pp {*}[vmoveto 200 200]
vstate -entities
vfit

Result: KO, picked 3D point doesn't lie on the cylinder.
Detected entities:
  c1                   Depth: 10.8189 Distance: 22.1353 Point: 3.4117 -4.07363 20 Normal: 0.298836 -0.298836 0.906308 (Select3D_SensitiveCylinder)
                       Detected Shape: TopoDS_TSolid
TagsNo tags attached.
Test case numbervselect/cone_cylinder/trsf_cyl

Attached Files

  • cyl_located.brep (1,849 bytes)

Relationships

child of 0032281 closedbugmaster Visualization - add Select3D_SensitiveCylinder 

Activities

kgv

2021-11-09 13:05

developer  

cyl_located.brep (1,849 bytes)

git

2021-11-09 15:20

administrator   ~0105068

Branch CR32652 has been created by kgv.

SHA-1: 9118e06ea2766ea4be2d80989aacb04ec2668329


Detailed log of new commits:

Author: kgv
Date: Tue Nov 9 15:17:43 2021 +0300

    0032652: Visualization - Select3D_SensitiveCylinder returns wrong 3D point
    
    SelectMgr_RectangularFrustum::OverlapsCylinder() - added missing 3D point transformation.
    StdSelect_BRepSelectionTool::ComputeSensitive() - fixed cylinder height computation on TopoDS_Shape with scale transformation.

git

2021-11-09 16:03

administrator   ~0105069

Branch CR32652 has been updated forcibly by kgv.

SHA-1: ae5496a0b370c1fcae7be7dabd5630994f6d89b4

git

2021-11-09 16:49

administrator   ~0105071

Branch CR32652 has been updated forcibly by kgv.

SHA-1: c8d0780a4a2f62acba5ec88006d77f3790b7d4d2

kgv

2021-11-09 18:16

developer   ~0105073

Patch is ready for review
- OCCT: branch CR32652.

http://jenkins-test-12.nnov.opencascade.com:8080/view/CR32652-master-KGV/

kgv

2021-11-09 22:01

developer   ~0105078

osa

2021-11-15 10:51

developer   ~0105188

The patch was reviewed

bugmaster

2021-11-21 12:31

administrator   ~0105289

Combination -
OCCT branch : IR-2021-11-19
master SHA - ea0ffd6efe2e05d9764495fa0a877ab75ab5f4e9
49e51745631c52b6c452c65adae4d6dfa21a1b1e
Products branch : IR-2021-11-19 SHA - 24ac02cc67913557271bc70687b86b53e78f9c44
was compiled on Linux, MacOS and Windows platforms and tested in optimize mode.

Number of compiler warnings:
No new/fixed warnings

Regressions/Differences/Improvements:
No regressions/differences

CPU differences:
Debian80-64:
OCCT
Total CPU difference: 17763.090000000444 / 17742.320000000425 [+0.12%]
Products
Total CPU difference: 11658.550000000125 / 11669.660000000133 [-0.10%]
Windows-64-VC14:
OCCT
Total CPU difference: 19745.71875 / 19762.140625 [-0.08%]
Products
Total CPU difference: 13066.0625 / 12843.21875 [+1.74%]


Image differences :
No differences that require special attention

Memory differences :
No differences that require special attention

git

2021-11-21 13:00

administrator   ~0105309

Branch CR32652 has been deleted by mnt.

SHA-1: c8d0780a4a2f62acba5ec88006d77f3790b7d4d2

Related Changesets

occt: master 794b3d89

2021-11-09 12:17:43

kgv


Committer: inv Details Diff
0032652: Visualization - Select3D_SensitiveCylinder returns wrong 3D point on transformed shape

SelectMgr_RectangularFrustum::OverlapsCylinder() - added missing 3D point transformation.
StdSelect_BRepSelectionTool::ComputeSensitive() - fixed cylinder height computation on TopoDS_Shape with scale transformation.
SelectMgr_AxisIntersector::OverlapsCylinder(),::OverlapsSphere() - added missing computations of surface normal.
Affected Issues
0032652
mod - src/SelectMgr/SelectMgr_AxisIntersector.cxx Diff File
mod - src/SelectMgr/SelectMgr_RectangularFrustum.cxx Diff File
mod - src/StdSelect/StdSelect_BRepSelectionTool.cxx Diff File
rm - tests/vselect/cone_cylinder/begin Diff File
mod - tests/vselect/cone_cylinder/check_depth Diff File
mod - tests/vselect/cone_cylinder/detecting Diff File
mod - tests/vselect/cone_cylinder/generate_images Diff File
mod - tests/vselect/cone_cylinder/polygon_selection Diff File
mod - tests/vselect/cone_cylinder/rectangle_selection Diff File
mod - tests/vselect/cone_cylinder/single_click_selection_cone Diff File
mod - tests/vselect/cone_cylinder/single_click_selection_cylinder Diff File
mod - tests/vselect/cone_cylinder/single_click_selection_trunc_cone Diff File
add - tests/vselect/cone_cylinder/trsf_cone Diff File
add - tests/vselect/cone_cylinder/trsf_cyl Diff File
rm - tests/vselect/sphere/begin Diff File
mod - tests/vselect/sphere/check_depth Diff File
mod - tests/vselect/sphere/detecting Diff File
mod - tests/vselect/sphere/generate_images Diff File
mod - tests/vselect/sphere/polygon_selection Diff File
mod - tests/vselect/sphere/rectangle_selection Diff File
mod - tests/vselect/sphere/single_click_selection Diff File
add - tests/vselect/sphere/trsf Diff File

Issue History

Date Modified Username Field Change
2021-11-09 12:51 kgv New Issue
2021-11-09 12:51 kgv Assigned To => kgv
2021-11-09 12:51 kgv Relationship added child of 0032281
2021-11-09 12:52 kgv Summary Visualization, TKOpenGles - support MSAA anti-aliasing within WebGL 2.0 => Visualization - Select3D_SensitiveCylinder returns wrong 3D point
2021-11-09 13:05 kgv File Added: cyl_located.brep
2021-11-09 15:20 git Note Added: 0105068
2021-11-09 15:48 kgv Summary Visualization - Select3D_SensitiveCylinder returns wrong 3D point => Visualization - Select3D_SensitiveCylinder returns wrong 3D point on transformed shape
2021-11-09 16:03 git Note Added: 0105069
2021-11-09 16:49 git Note Added: 0105071
2021-11-09 18:16 kgv Test case number => vselect/cone_cylinder/trsf_cyl
2021-11-09 18:16 kgv Note Added: 0105073
2021-11-09 18:16 kgv Assigned To kgv => osa
2021-11-09 18:16 kgv Status new => resolved
2021-11-09 18:16 kgv Severity minor => major
2021-11-09 21:06 kgv Target Version 7.7.0 => 7.6.1
2021-11-09 22:01 kgv Note Added: 0105078
2021-11-15 10:51 osa Note Added: 0105188
2021-11-15 10:51 osa Assigned To osa => bugmaster
2021-11-15 10:51 osa Status resolved => reviewed
2021-11-21 12:27 bugmaster Status reviewed => tested
2021-11-21 12:31 bugmaster Note Added: 0105289
2021-11-21 12:46 inv Changeset attached => occt master 794b3d89
2021-11-21 12:46 inv Assigned To bugmaster => inv
2021-11-21 12:46 inv Status tested => verified
2021-11-21 12:46 inv Resolution open => fixed
2021-11-21 13:00 git Note Added: 0105309
2023-02-03 04:49 vglukhik Status verified => closed
2023-02-03 04:49 vglukhik Fixed in Version => 7.7.0